Better scrabble boards, added some social links

--- a/content/hingedtessapp.html
+++ b/content/hingedtessapp.html
@@ -2,10 +2,10 @@ title: Hinged Tessellations App
 type: app
 
 extraCSS: ["http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css", /hingetessapp/css/hingetess.css]
-extraJS: ["http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js", /hingetessapp/js/canvasStack1v00.js,/hingetessapp/js/geometry.js, /hingetessapp/js/hingetess.js]
+extraJS: ["http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js", /hingetessapp/js/canvasStack1v00.js,/hingetessapp/js/simple2d.js, /hingetessapp/js/hingetess.js]
 ---
 
-<div id = "hi">
+<div id = "hinged-tess-example">
     <div id = "title-box">
         <h1> Hinged Tessellations </h1>
     </div>
